# whatsapp-mail-data-pipeline

./: .env.example  .gitignore  environment.yml  pyproject.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json
1_parser/: mbox_parser.ipynb  whatsapp_parser.ipynb
2_enrich/: a_transcribe_audio.ipynb  b_describe_pictures.ipynb  c_enrich_attachment_information.ipynb
9_upload_data/: a_upload_db.ipynb  b_upload_openwebui.ipynb
data/source/: blocklist.json
src/: delete_all_emails.py  delete_message.py
src/agent/: agent.py  prompts.py  tools.py
src/enrich/: describe_pictures.py  describe_videos.py  enrich_metadata.py  extract_documents.py  extract_zips.py  transcribe_audio.py
src/load/: chromadb_loader.py  sqlite_loader.py
src/parser/: document_parser.py  eml_parser.py  mbox_parser.py  whatsapp_parser.py
