[project]
name = "whatsapp-mail-data-pipeline"
version = "0.1.0"
description = "Pipeline that converts emails in Mbox format and whatsapp chat backups into a json structure"
requires-python = ">=3.14"
dependencies = [
    "ipykernel",
    "openai",
    "pymongo",
    "requests",
    "python-dotenv",
]
